--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <footer class="text-center p-6 text-gray-500 text-sm">
         <p>祝您游戏愉快！</p>
         <!-- 更改：添加 PARKS 平局规则 -->
-        <p class="mt-1">《国家公园》平局提示：平局时，访问公园最多者获胜。</p>
+        <p class="mt-1">Wingspan平局提示：平局时，剩余食物最多者获胜。</p>
     </footer>
 
     <!-- 5. JavaScript 逻辑 (无功能性更改，它会自动适配新的行) -->
