--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section id="parks-section" class="p-4 md:p-6">
         <!-- ... (PARKS header) ... -->
         <div class="flex flex-wrap justify-between items-center mb-4 gap-4">
-            <h2 class="text-3xl font-bold text-green-800">🌲 国家公园 (PARKS)</h2>
+            <h2 class="text-3xl font-bold text-green-800">🌲 国家公园 2 (PARKS 2)</h2>
             <div class="flex gap-3 flex-shrink-0">
                 <button id="parks-add-player" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded transition-colors">
                     ＋ 添加玩家
