--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header class="bg-white p-4 shadow-md sticky top-0 z-20"> <!-- 更改：z-20 确保在毛玻璃之上 -->
         <div class="container mx-auto flex flex-wrap justify-between items-center gap-4">
             <h1 class="text-2xl font-bold text-teal-800">
-                🎲 桌游计分器
+                🎲 桌游计分器 Wingspan + Parks 2
             </h1>
             <!-- 移除了全局的添加/重置按钮 -->
         </div>
