--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
                         <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🧑‍🚀 个人目标</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🖼️ 照片分数 <span class="text-sm text-gray-500">(1分/张)</span></td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🖼️ 照片分数</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷 照片奖励 <span class="text-sm text-gray-500">(最多/第二多)</span></td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷 照片奖励</td>
                     </tr>
                     <tr class="border-b border-gray-200">
                         <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅 季节奖励 <span class="text-sm text-gray-500">（3分）</span></td>
