--- a/index.html
+++ b/index.html
@@ -172,22 +172,22 @@
                 <!-- 更改：PARKS 计分项已根据规则更新 -->
                 <tbody>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🌲 公园总分</td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🌲公园总分</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🧑‍🚀 个人目标</td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🧑个人目标</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🖼️ 照片分数</td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🖼️照片分数</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷 照片奖励</td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷照片奖励</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅 季节奖励 <span class="text-sm text-gray-500">（3分）</span></td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅季节奖励 <span class="text-sm text-gray-500">（3分）</span></td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🎖️ 起始玩家</td>
+                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🎖️起始玩家</td>
                     </tr>
                 </tbody>
                 <tfoot>
