--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             border: 1px solid #D1D5DB; /* gray-300 */
             border-radius: 6px;
             text-align: center;
-            font-size: 1.125rem; /* text-lg */
+            font-size: 1.125rem; /* text-base */
         }
         .table-input:focus {
             border-color: #3B82F6; /* blue-500 */
@@ -101,34 +101,34 @@
                         <th class="p-2 sticky left-0 bg-stone-100/75 backdrop-blur-sm text-sm font-medium text-gray-600 z-10">移除玩家</th>
                     </tr>
                     <tr id="ws-player-name-row" class="text-gray-700"> <!-- JS 会应用主题 -->
-                        <th class="p-4 text-left text-lg font-bold sticky left-0 z-10">
+                        <th class="p-4 text-left text-base font-bold sticky left-0 z-10">
                             <span class="theme-placeholder">计分项</span>
                         </th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🐦 鸟类牌</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🐦 鸟类牌</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">⭐ 奖励卡</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">⭐ 奖励卡</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🏆 轮末目标</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🏆 轮末目标</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🥚 鸟蛋</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🥚 鸟蛋</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🍇 贮藏</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🍇 贮藏</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🔀 塞入</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🔀 塞入</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr id="ws-total-row"> <!-- JS 会应用主题 -->
-                        <td class="p-4 text-lg font-bold sticky left-0 z-10">
+                        <td class="p-4 text-base font-bold sticky left-0 z-10">
                             <span class="total-text-placeholder text-amber-900">👑 总分</span>
                         </td>
                     </tr>
@@ -164,7 +164,7 @@
                         <th class="p-2 sticky left-0 bg-stone-100/75 backdrop-blur-sm text-sm font-medium text-gray-600 z-10">移除玩家</th>
                     </tr>
                     <tr id="parks-player-name-row" class="text-gray-700"> <!-- JS 会应用主题 -->
-                        <th class="p-4 text-left text-lg font-bold sticky left-0 z-10">
+                        <th class="p-4 text-left text-base font-bold sticky left-0 z-10">
                              <span class="theme-placeholder">计分项</span>
                         </th>
                     </tr>
@@ -172,27 +172,27 @@
                 <!-- 更改：PARKS 计分项已根据规则更新 -->
                 <tbody>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🌲公园总分</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🌲公园总分</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🧑个人目标</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🧑个人目标</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🖼️照片分数</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🖼️照片分数</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷照片奖励</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷照片奖励</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅季节奖励 <span class="text-sm text-gray-500">（3分）</span></td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅季节奖励 <span class="text-sm text-gray-500">（3分）</span></td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-lg font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🎖️起始玩家</td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🎖️起始玩家</td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr id="parks-total-row"> <!-- JS 会应用主题 -->
-                        <td class="p-4 text-lg font-bold sticky left-0 z-10">
+                        <td class="p-4 text-base font-bold sticky left-0 z-10">
                             <span class="total-text-placeholder text-orange-900">👑 总分</span>
                         </td>
                     </tr>
