--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                         <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📷照片奖励</td>
                     </tr>
                     <tr class="border-b border-gray-200">
-                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅季节奖励 <span class="text-sm text-gray-500">（3分）</span></td>
+                        <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">📅季节奖励</td>
+                            <span class="text-sm text-gray-500">（3分）</span>
                     </tr>
                     <tr class="border-b border-gray-200">
                         <td class="p-4 text-base font-medium sticky left-0 bg-white/75 backdrop-blur-sm">🎖️起始玩家</td>
